<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MealDetailsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        android:id="@+id/close"
        android:layout_marginTop="45dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_close" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp"
        android:id="@+id/like"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_like" />

    </androidx.cardview.widget.CardView>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:id="@+id/thumbnail_image"
                android:src="@drawable/icon_recipe"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:background="@drawable/gradient_imageview_bg"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/card"
                android:layout_marginTop="250dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardElevation="0dp"
                app:cardCornerRadius="16dp"
                >

                <View
                    android:layout_width="60dp"
                    android:layout_height="2dp"
                    android:id="@+id/line"
                    android:background="@color/view_background"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/card"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.7"
                android:text="@string/title"
                android:textStyle="bold"
                android:textColor="@color/textheading"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:id="@+id/title"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/card"
                />

            <ImageView
                android:id="@+id/clock"
                android:layout_width="0dp"
                android:layout_height="15dp"
                android:src="@drawable/ic_timer"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintStart_toEndOf="@+id/title"
                app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintWidth_percent="0.1" />

            <TextView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center"
                android:text="@string/duration"
                android:layout_marginEnd="16dp"
                android:textColor="@color/textcolor"
                android:textAppearance="@style/TextAppearance.AppCompat"
                app:layout_constraintBottom_toBottomOf="@+id/title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/clock"
                app:layout_constraintTop_toBottomOf="@+id/card"
                app:layout_constraintWidth_percent="0.2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_marginTop="10dp"
                android:paddingStart="16dp"
                android:textColor="@color/textcolor"
                android:paddingEnd="16dp"
                android:paddingBottom="15dp"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:id="@+id/description"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold"
                android:textColor="@color/textheading"
                app:layout_constraintWidth_percent="0.6"
                android:layout_marginStart="16dp"
                android:id="@+id/heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description"
                />

            <TextView
                android:id="@+id/itemcount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|end"
                android:layout_marginEnd="16dp"
                android:textColor="@color/textcolor"
                app:layout_constraintBottom_toBottomOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/items"
                app:layout_constraintStart_toEndOf="@+id/heading"
                app:layout_constraintTop_toBottomOf="@+id/heading"
                app:layout_constraintWidth_percent="0.3" />


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ingredient_list"
                android:padding="8dp"
                app:layout_constraintTop_toBottomOf="@+id/heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/item_ingredient_list"
                tools:itemCount="2"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_link"
                app:layout_constraintTop_toBottomOf="@+id/ingredient_list"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintWidth_percent="0.6"
                android:background="@drawable/rounded_button"
                android:padding="16dp"
                android:id="@+id/openlink"
                android:layout_margin="16dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:layout_centerInParent="true"
                android:layout_marginBottom="10dp"
                />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>